[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "TrainerBox"
version = "0.0.1"
dependencies = [
  "flask >= 2.2.2",
]
requires-python = ">= 3.10"
authors = [
  {name = "Michele Berry", email = "michelelberry@gmail.com"},
]
description = "Web app to manage complete awareness of your Pokemon card inventory."
readme = "README.md"
